unpackaged/main/default/objects/Echo_Store__c/Echo_Store__c.object-meta.xml
<CustomObject>
    <label>Echo Store</label>
    <nameField>
        <label>Echo Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Echo Stores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>