unpackaged/main/default/objects/Echo_Store__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Echo Stores</relationshipLabel>
    <relationshipName>Echo_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>