unpackaged/main/default/objects/Echo_Store__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Echo Stores</relationshipLabel>
    <relationshipName>Echo_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>