unpackaged/main/default/objects/Echo_Store__c/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <label>Billing Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>