unpackaged/main/default/objects/Echo_Store__c/fields/Contract_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date_Received__c</fullName>
    <label>Contract Date Received</label>
    <type>Date</type>
</CustomField>