unpackaged/main/default/objects/Echo_Store__c/fields/Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date__c</fullName>
    <label>Contract Expiration Date</label>
    <type>Date</type>
</CustomField>