unpackaged/main/default/objects/Echo_Store__c/fields/Contract_Terms_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Terms_Months__c</fullName>
    <label>Contract Terms Months</label>
    <length>100</length>
    <type>Text</type>
</CustomField>