unpackaged/main/default/objects/Echo_Store__c/fields/Days_till_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_till_Expiration__c</fullName>
    <formula>Contract_Expiration_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days till Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>