unpackaged/main/default/objects/Echo_Store__c/fields/Echo_Group__c.field-meta.xml
<CustomField>
    <fullName>Echo_Group__c</fullName>
    <label>Echo Group</label>
    <referenceTo>Echo_Group__c</referenceTo>
    <relationshipLabel>Echo Stores</relationshipLabel>
    <relationshipName>Echo_Stores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>