unpackaged/main/default/objects/Echo_Store__c/fields/Echo_Store_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Echo_Store_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Echo Store ID (18)</label>
    <type>Text</type>
</CustomField>