unpackaged/main/default/objects/Echo_Store__c/fields/Main_Product__c.field-meta.xml
<CustomField>
    <fullName>Main_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Echo Stores</relationshipLabel>
    <relationshipName>Echo_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>