unpackaged/main/default/objects/Echo_Store__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Echo Stores (Salesperson)</relationshipLabel>
    <relationshipName>Echo_Stores1</relationshipName>
    <type>Lookup</type>
</CustomField>