unpackaged/main/default/objects/Echo_Store__c/fields/Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee__c</fullName>
    <label>Setup Fee</label>
    <type>Date</type>
</CustomField>