unpackaged/main/default/objects/Echo_Store__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>The date the store becomes active and billing products are set active.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>