unpackaged/main/default/objects/Echo_Store__c/fields/Store_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>Store_Status_Text__c</fullName>
    <label>Store Status Text</label>
    <length>64</length>
    <type>Text</type>
</CustomField>