unpackaged/main/default/objects/Echo_Store__c/recordTypes/Echo.recordType-meta.xml
<RecordType>
    <fullName>Echo</fullName>
    <active>true</active>
    <label>Echo</label>
</RecordType>